[gd_scene load_steps=7 format=2]

[ext_resource path="res://tools/Tool.tscn" type="PackedScene" id=1]
[ext_resource path="res://tools/WateringCan.gd" type="Script" id=2]
[ext_resource path="res://tools/watering_can.png" type="Texture" id=3]
[ext_resource path="res://tools/watering_can_shadow.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "use"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -40.0, -40.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7, -5 ), Vector2( -8.5, 0 ), Vector2( -8.5, 0 ) ]
}

[node name="TestTool" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="ShadowSprite" parent="." index="1"]
position = Vector2( -0.314018, 3.87294 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource( 1 )

[node name="TargetPosition" type="Position2D" parent="." index="4"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="." index="5"]
position = Vector2( -7, -5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
anims/use = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_TestTool_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_TestTool_area_exited"]
